--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -872,7 +872,7 @@ main {
 
 
 /*-----------------------------------*\
-  #PORTFOLIO
+  #PUBLICATIONS
 \*-----------------------------------*/
 
 .filter-list { display: none; }
@@ -1031,7 +1031,7 @@ main {
 
 
 /*-----------------------------------*\
-  #BLOG
+  #RESEARCH
 \*-----------------------------------*/
 
 .blog-posts { margin-bottom: 10px; }
